added endpoints for updating and getting client version info for Andriod and iOS
