# docs/swagger.json
@@ -1,10 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "REST API for Novels app.\nNew in version:\u003cbr\u003e - added endpoint /api/reset-user for reseting all progress;\u003cbr\u003e - edited usernames for guest and social login.",
+        "description": "REST API for Novels app.\nNew in version:\u003cbr\u003e - added endpoints for updating and getting client version info for Andriod and iOS.",
         "title": "Novels REST API",
         "contact": {},
-        "version": "0.0.8"
+        "version": "0.0.9"
     },
     "host": "165.227.207.77:8000",
     "basePath": "/",
@@ -27,6 +27,101 @@
                     "admin"
                 ],
                 "summary": "Drop all users",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/admin/version": {
+            "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Returns a client version for Andrion or iOS by platform name.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Get client version",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "requested platform",
+                        "name": "platform",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetVersionResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrResp"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Update client version info for requested platform",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Update client version",
+                "parameters": [
+                    {
+                        "description": "body for a new version saving",
+                        "name": "JSON",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateVersionRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
@@ -1003,6 +1098,14 @@
                 }
             }
         },
+        "dto.GetVersionResponse": {
+            "type": "object",
+            "properties": {
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.GuestSignInRequest": {
             "type": "object",
             "properties": {
@@ -1138,6 +1241,17 @@
                 "title": {
                     "type": "string",
                     "example": "My new novel"
+                }
+            }
+        },
+        "dto.UpdateVersionRequest": {
+            "type": "object",
+            "properties": {
+                "platform": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
                 }
             }
         },
